# PKMNTest

./: CMakeLists.txt  CMakePresets.json  README.md
res/: Moves.json  PlayerTeam.json  PokeDex.json  TestMon.json
res/TrainerTeams/: GymLeaderSophia.json
src/: Abilities.cpp  Abilities.h  BattleController.cpp  BattleController.h  BattlingPokemon.cpp  BattlingPokemon.h  EggGroups.cpp  EggGroups.h  Gender.cpp  Gender.h  JsonReader.cpp  JsonReader.h  LTexture.cpp  LTexture.h  Listener.cpp  Listener.h  Move.cpp  Move.h  Nature.cpp  Nature.h  PokeDex.cpp  PokeDex.h  Pokemon.cpp  Pokemon.h  PokemonTeam.cpp  PokemonTeam.h  Random.cpp  Random.h  Species.cpp  Species.h  Stats.cpp  Stats.h  Status.cpp  Status.h  TestListener.cpp  TestListener.h  Types.cpp  Types.h  main.cpp
src/loopfunctions/: Delay.cpp  Delay.h  HandlerRegistry.cpp  HandlerRegistry.h  InputHandler.cpp  InputHandler.h  Render.cpp  Render.h  Update.cpp  Update.h
